syntax = "proto3";

package authservice;

service AuthService {
  rpc IssueToken (IssueTokenRequest) returns (IssueTokenResponse);
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message IssueTokenRequest {
    string email = 1;
    string password = 2;
}

message IssueTokenResponse {
    bool success = 1;
    string token = 2;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    bool success = 1;
}